@@ -29,9 +29,18 @@
 #include <string.h>
 #include <errno.h>
 
+#ifdef __cplusplus
+extern "C" {
+#endif
+
 #include <lua.h>
 #include <lauxlib.h>
 #include <lualib.h>
+
+#ifdef __cplusplus
+int luaopen_graphic (lua_State * L);
+}
+#endif
 
 typedef unsigned char byte;
 
