@@ -34,9 +34,18 @@
 #  include <langinfo.h>
 #endif
 
+#ifdef __cplusplus
+extern "C" {
+#endif
+
 #include <lua.h>
 #include <lauxlib.h>
 #include <lualib.h>
+
+#ifdef __cplusplus
+int luaopen_term (lua_State * L);
+}
+#endif
 
 static char *startdir = NULL;
 static lua_State *term_L;	/* lua_State of the running terminal */
