@@ -23,9 +23,19 @@
 #include "avtaddons.h"
 #include <stdlib.h>
 
+
+#ifdef __cplusplus
+extern "C" {
+#endif
+
 #include <lua.h>
 #include <lauxlib.h>
 #include <lualib.h>
+
+#ifdef __cplusplus
+int luaopen_vorbis (lua_State * L);
+}
+#endif
 
 #define STB_VORBIS_HEADER_ONLY 1
 #define STB_VORBIS_NO_PUSHDATA_API 1
